Added connection to second collection, and CRUD operations
